feat(memory): enforce deny-by-default synapse remote source policy

--- a/crates/synapse-core/Cargo.toml
+++ b/crates/synapse-core/Cargo.toml
@@ -43,6 +43,7 @@ tokio-util = { version = "0.7", features = ["codec"] }
 tonic = "0.11"
 uuid = { version = "1.20.0", features = ["v4", "serde"] }
 dirs = "5.0"
+tracing = "0.1"
 
 # Candle replacement for FastEmbed/ORT
 candle-core = "0.8"
