Refactor synapse-core to support optional/remote embeddings and fix tests
- Introduce `local-embeddings` (Candle) and `remote-embeddings` (Hugging Face API) features in `synapse-core`.
- Refactor `VectorStore` to use `Embedder` trait, allowing swappable backends.
- Update `Cargo.toml` to define `memory-synapse-local` (heavy) and `memory-synapse-remote` (light) features.
- Redefine `memory-synapse` as a base feature without embeddings to speed up compilation by default.
- Fix `SynapseStore` to handle `ASK` query results (Boolean).
- Fix `import_ontology` tests to query across named graphs using `GRAPH ?g`.
- Fix `synapse_integration` tests compilation and runtime issues.
- Fix `zeroclaw` config bugs preventing compilation with `memory-synapse` enabled.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -151,8 +151,12 @@ landlock = ["sandbox-landlock"]
 probe = ["dep:probe-rs"]
 # rag-pdf = PDF ingestion for datasheet RAG
 rag-pdf = ["dep:pdf-extract"]
-# memory-synapse = Synapse memory backend integration
+# memory-synapse = Synapse memory backend integration (base only)
 memory-synapse = ["dep:synapse-core", "dep:oxigraph"]
+# memory-synapse-local = Synapse memory with local Candle embeddings (heavy)
+memory-synapse-local = ["memory-synapse", "synapse-core/local-embeddings"]
+# memory-synapse-remote = Synapse memory with remote Hugging Face API embeddings (light)
+memory-synapse-remote = ["memory-synapse", "synapse-core/remote-embeddings"]
 [profile.release]
 opt-level = "z"      # Optimize for size
 lto = "thin"         # Lower memory use during release builds
