--- a/crates/synapse-core/Cargo.toml
+++ b/crates/synapse-core/Cargo.toml
@@ -44,13 +44,19 @@ tonic = "0.11"
 uuid = { version = "1.20.0", features = ["v4", "serde"] }
 dirs = "5.0"
 tracing = "0.1"
+async-trait = "0.1"
 
 # Candle replacement for FastEmbed/ORT
-candle-core = "0.8"
-candle-nn = "0.8"
-candle-transformers = "0.8"
-tokenizers = "0.20"
-hf-hub = "0.4"
+candle-core = { version = "0.8", optional = true }
+candle-nn = { version = "0.8", optional = true }
+candle-transformers = { version = "0.8", optional = true }
+tokenizers = { version = "0.20", optional = true }
+hf-hub = { version = "0.4", optional = true }
 
 [build-dependencies]
 tonic-build = "0.11"
+
+[features]
+default = ["local-embeddings"]
+local-embeddings = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
+remote-embeddings = []
