--- a/crates/synapse-core/Cargo.toml
+++ b/crates/synapse-core/Cargo.toml
@@ -60,3 +60,6 @@ tonic-build = "0.11"
 default = ["local-embeddings"]
 local-embeddings = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
 remote-embeddings = []
+
+[dev-dependencies]
+tempfile = "3.10"
