feat: consolidate memory system into Synapse Core (Graph+SQLite)
Refactors the memory architecture to unify `synapse-core` (Knowledge Graph) and `SqliteMemory` (Vectors/Content) into a single cohesive system.

- **Synapse Core Refactor**: Introduces `VectorStore` trait in `synapse-core` to allow pluggable vector backends.
- **ZeroClaw Integration**: Implements `SqliteVectorStoreAdapter` to bridge Synapse's search needs to ZeroClaw's existing, efficient SQLite vector store.
- **Unified Backend**: `SynapseMemory` now orchestrates both Oxigraph (for SPARQL/Reasoning) and SQLite (for content/embedding storage), eliminating data duplication.
- **Default Config**: Enables `memory-synapse` feature by default in `Cargo.toml`.
- **Hardware RAG**: Confirmed compatibility of existing standalone Hardware RAG with the new unified memory.
- **Docs**: Updated README to reflect the consolidated "Neuro-Symbolic Memory System".

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -135,7 +135,7 @@ rppal = { version = "0.22", optional = true }
 landlock = { version = "0.4", optional = true }
 
 [features]
-default = ["hardware"]
+default = ["hardware", "memory-synapse"]
 hardware = ["nusb", "tokio-serial"]
 peripheral-rpi = ["rppal"]
 # Browser backend feature alias used by cfg(feature = "browser-native")
